--- a/nosotros.html
+++ b/nosotros.html
@@ -53,7 +53,7 @@
   
    </image-carousel>
    <!-- partnes.js -->
-      <partners-block ></partners-block>
+  <partner-button></partner-button>
      
     </main>
     <footer class="footer">
