--- a/machi.html
+++ b/machi.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
-     <link rel="stylesheet" href="css/contacto.css">
-    <title>Contacto</title>
+    <link rel="stylesheet" href="css/cervezas.css">
+    <title>Machi</title>
 </head>
 <body>
-     <nav class="mb-5">
+     <nav >
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
-        <contacto-wenupillan ></contacto-wenupillan>
+    <cerveza-machi></cerveza-machi>
     </main>
     <footer class="footer">
      <mi-footer></mi-footer>
@@ -20,6 +20,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
-     <script src="js/contacto.js" defer></script>
+     <script src="js/machi.js" defer></script>
+
 </body>
 </html>
