--- a/cervezas.html
+++ b/cervezas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
-
+    <link rel="preload" href="assets/nav/Logo.png" as="image" />
     <title>Cervezas</title>
 </head>
 <body>
