--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/index.css">
+ 
+    
     <title>Cervezas</title>
 </head>
 <body>
-     <nav class="mb-0">
+     <nav class="" >
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
