--- a/lonko.html
+++ b/lonko.html
@@ -12,13 +12,13 @@
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
-     <cerveza-lonko></cerveza-lonko>
+     <cerveza-lonko ></cerveza-lonko>
       <section class="container">
  
       
 
     </main>
-    <footer class="footer">
+    <footer class="footer" style="margin-top: -14rem;">
      <mi-footer></mi-footer>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
