--- a/machi.html
+++ b/machi.html
@@ -12,15 +12,17 @@
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
-    <cerveza-machi></cerveza-machi>
+    <cerveza-machi ></cerveza-machi>
     </main>
-    <footer class="footer">
+    <footer class="footer" style="margin-top: -8rem;">
      <mi-footer></mi-footer>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
      <script src="js/machi.js" defer></script>
+
+
 
 </body>
 </html>
