--- a/restaurant.html
+++ b/restaurant.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/restaurant.css">
-
+     <link rel="preload" href="assets/nav/Logo.png" as="image" />
     <title>Restaurant</title>
 </head>
 <body>
@@ -15,11 +15,11 @@
 <main class="container my-5">
 
    
-   <menu-pdf class="mb-5"></menu-pdf>
+   <menu-pdf class=""></menu-pdf>
 
 
 </main>
-    <footer class="footer mt-5">
+    <footer class="footer" style="margin-top: -12rem;">
      <mi-footer></mi-footer>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
