--- a/weichafe.html
+++ b/weichafe.html
@@ -17,7 +17,7 @@
 
      
     </main>
-    <footer class="footer">
+    <footer class="footer" style="margin-top: -14rem;">
      <mi-footer></mi-footer>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
