--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Cervezas</title>
 </head>
 <body>
-     <nav class="" >
+     <nav class="" style="background: #000 url('assets/nav/azul.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
@@ -53,6 +53,6 @@
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
      <script src="js/cervezasHome.js" defer></script>
-     <script src="js/partners.js" defer></script>
+
 </body>
 </html>
