--- a/restaurant.html
+++ b/restaurant.html
@@ -9,7 +9,7 @@
     <title>Restaurant</title>
 </head>
 <body>
-     <nav class="mb-5">
+     <nav class="mb-5" style="background: #000 url('assets/nav/negro.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
      </nav>
 <main class="container my-5">
