--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <title>Contacto</title>
 </head>
 <body>
-     <nav class="mb-5">
+     <nav class="mb-5" style="background: #000 url('assets/nav/violeta.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
