--- a/tienda.html
+++ b/tienda.html
@@ -8,7 +8,7 @@
     <title>Tienda</title>
 </head>
 <body>
-     <nav class="mb-5">
+     <nav class="mb-5" style="background: #000 url('assets/nav/verde.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
