--- a/nosotros.html
+++ b/nosotros.html
@@ -8,7 +8,7 @@
     <title>Nosotros</title>
 </head>
 <body>
-     <nav class="mb-0" style="background: #000 url('assets/nav/gris.jpg') center center / cover no-repeat; height: 400px;">
+     <nav class="mb-0" style="background: #000 url('assets/nav/') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
