navegador entre cervezas

--- a/machi.html
+++ b/machi.html
@@ -21,6 +21,8 @@
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
      <script src="js/machi.js" defer></script>
+     <script src="js/subNav.js" defer></script>
+    
 
 
 
