--- a/toqui.html
+++ b/toqui.html
@@ -21,5 +21,6 @@
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
      <script src="js/toqui.js" defer></script>
+       <script src="js/subNav.js" defer></script>
 </body>
 </html>
