--- a/lonko.html
+++ b/lonko.html
@@ -24,7 +24,8 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
-       <script src="js/lonko.js" defer></script>
+     <script src="js/lonko.js" defer></script>
+     <script src="js/subNav.js" defer></script>
      
 </body>
 </html>
