--- a/tienda.html
+++ b/tienda.html
@@ -12,7 +12,7 @@
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
-
+<navbar-menu></navbar-menu>
     </main>
     <footer class="footer">
      <mi-footer></mi-footer>
@@ -20,5 +20,6 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
+     <script src="js/subNav.js" defer></script>
 </body>
 </html>
