--- a/weichafe.html
+++ b/weichafe.html
@@ -23,6 +23,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
-        <script src="js/weichafe.js" defer></script>
+     <script src="js/weichafe.js" defer></script>
+     <script src="js/subNav.js" defer></script>
 </body>
 </html>
