--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
      <script src="js/cervezasHome.js" defer></script>
-
+     <script src="js/partners.js" defer></script>
 </body>
 </html>
