carrito de compra v-1

--- a/tienda.html
+++ b/tienda.html
@@ -12,7 +12,8 @@
         <mi-navegacion></mi-navegacion>
     </nav>
     <main>
-<navbar-menu></navbar-menu>
+
+ <tienda-component></tienda-component>
     </main>
     <footer class="footer">
      <mi-footer></mi-footer>
@@ -20,6 +21,9 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
-     <script src="js/subNav.js" defer></script>
+     <script src="js/productos.js" defer></script>
+     <script src="js/tienda-component.js" defer></script>
+     <script type="module" src="js/carrito-compra.js"></script>
+     
 </body>
 </html>
