tienda y compra finalizada

--- a/tienda.html
+++ b/tienda.html
@@ -24,6 +24,7 @@
      <script src="js/productos.js" defer></script>
      <script src="js/tienda-component.js" defer></script>
      <script type="module" src="js/carrito-compra.js"></script>
+      <script type="module" src="js/formulario-pago.js"></script>
      
 </body>
 </html>
