--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <cervezas-home> </cervezas-home>
 
       <partner-button></partner-button>
-                
+      <whatsapp-chat></whatsapp-chat>     
       </div>
     </main>
     <footer class="footer">
@@ -54,6 +54,7 @@
      <script src="js/footer.js" defer></script>
      <script src="js/cervezasHome.js" defer></script>
      <script src="js/partners.js" defer></script>
+     <script src="js/wassapChat.js" defer></script>
 
 </body>
 </html>
