--- a/machi.html
+++ b/machi.html
@@ -13,6 +13,7 @@
     </nav>
     <main>
     <cerveza-machi ></cerveza-machi>
+    <whatsapp-chat></whatsapp-chat> 
     </main>
     <footer class="footer" style="margin-top: -8rem;">
      <mi-footer></mi-footer>
@@ -22,6 +23,7 @@
      <script src="js/footer.js" defer></script>
      <script src="js/machi.js" defer></script>
      <script src="js/subNav.js" defer></script>
+     <script src="js/wassapChat.js" defer></script>
     
 
 
