--- a/nosotros.html
+++ b/nosotros.html
@@ -54,6 +54,7 @@
    </image-carousel>
    <!-- partnes.js -->
   <partner-button></partner-button>
+   <whatsapp-chat></whatsapp-chat> 
      
     </main>
     <footer class="footer">
@@ -64,5 +65,6 @@
      <script src="js/footer.js" defer></script>
      <script src="js/carrusel.js" defer></script>
      <script src="js/partners.js" defer></script>
+     <script src="js/wassapChat.js" defer></script>
 </body>
 </html>
