--- a/toqui.html
+++ b/toqui.html
@@ -13,6 +13,7 @@
     </nav>
     <main>
         <cerveza-toqui></cerveza-toqui>
+        <whatsapp-chat></whatsapp-chat> 
     </main>
     <footer class="footer" style="margin-top: -14rem;" >
      <mi-footer></mi-footer>
@@ -21,6 +22,7 @@
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
      <script src="js/toqui.js" defer></script>
-       <script src="js/subNav.js" defer></script>
+     <script src="js/subNav.js" defer></script>
+     <script src="js/wassapChat.js" defer></script>
 </body>
 </html>
