--- a/weichafe.html
+++ b/weichafe.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
       <cerveza-weichafe></cerveza-weichafe>
-    
+      <whatsapp-chat></whatsapp-chat> 
 
      
     </main>
@@ -25,5 +25,6 @@
      <script src="js/footer.js" defer></script>
      <script src="js/weichafe.js" defer></script>
      <script src="js/subNav.js" defer></script>
+     <script src="js/wassapChat.js" defer></script>
 </body>
 </html>
