--- a/lonko.html
+++ b/lonko.html
@@ -15,7 +15,7 @@
      <cerveza-lonko ></cerveza-lonko>
       <section class="container">
  
-      
+       <whatsapp-chat></whatsapp-chat> 
 
     </main>
     <footer class="footer" style="margin-top: -14rem;">
@@ -26,6 +26,7 @@
      <script src="js/footer.js" defer></script>
      <script src="js/lonko.js" defer></script>
      <script src="js/subNav.js" defer></script>
+     <script src="js/wassapChat.js" defer></script>
      
 </body>
 </html>
