--- a/tienda.html
+++ b/tienda.html
@@ -11,6 +11,7 @@
      <nav class="mb-5" style="background: #000 url('assets/nav/verde.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
     </nav>
+     <whatsapp-chat></whatsapp-chat> 
     <main>
 
  <tienda-component></tienda-component>
