--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 
 
 </div>
-      <cervezas-home> </cervezas-home>
+      <suscribete-item></suscribete-item>   
+      <cervezas-home></cervezas-home>
 
       <partner-button></partner-button>
-      <whatsapp-chat></whatsapp-chat>     
+      <whatsapp-chat></whatsapp-chat>  
       </div>
     </main>
     <footer class="footer">
@@ -55,6 +56,7 @@
      <script src="js/cervezasHome.js" defer></script>
      <script src="js/partners.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
+     <script src="js/suscribete.js" defer></script>
 
 </body>
 </html>
