mejora del suscribete

--- a/nosotros.html
+++ b/nosotros.html
@@ -45,7 +45,7 @@
 
 
 </div>
-
+  <suscribete-item></suscribete-item>
  <image-carousel>
     <img src="assets/nosotros/cerveza-1.jpg" alt="1">
     <img src="assets/nosotros/cerveza-2.jpg" alt="1">
@@ -54,6 +54,7 @@
    </image-carousel>
    <!-- partnes.js -->
   <partner-button></partner-button>
+
    <whatsapp-chat></whatsapp-chat> 
      
     </main>
@@ -66,5 +67,6 @@
      <script src="js/carrusel.js" defer></script>
      <script src="js/partners.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
+     <script src="js/suscribete.js" defer></script>
 </body>
 </html>
