--- a/contacto.html
+++ b/contacto.html
@@ -10,8 +10,11 @@
     <title>Contacto</title>
 </head>
 <body>
-     <nav class="mb-5" style="background: url('assets/nav/violeta.jpg') center center / cover no-repeat; height: 400px;">
+     <!-- <nav class="mb-5" style="background: url('assets/nav/violeta.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
+    </nav> -->
+    <nav>
+       <nav-fijo></nav-fijo>
     </nav>
     <main>
         <contacto-wenupillan ></contacto-wenupillan>
@@ -23,5 +26,6 @@
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
      <script src="js/contacto.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
 </body>
 </html>
