--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <title>Cervezas</title>
 </head>
 <body>
-     <nav class="" style="background: #000 url('assets/nav/azul.jpg') center center / cover no-repeat; height: 400px;">
-        <mi-navegacion></mi-navegacion>
+     <!-- <nav class="" style="background: #000 url('assets/nav/azul.jpg') center center / cover no-repeat; height: 400px;">
+         <mi-navegacion></mi-navegacion> 
+    </nav> -->
+    <nav>
+      <nav-fijo></nav-fijo>
     </nav>
     <main>
  <div class="color-back ">
@@ -57,6 +60,7 @@
      <script src="js/partners.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
      <script src="js/suscribete.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
 
 </body>
 </html>
