--- a/lonko.html
+++ b/lonko.html
@@ -8,8 +8,11 @@
     <title>Lonko</title>
 </head>
 <body>
-     <nav>
+     <!-- <nav>
         <mi-navegacion></mi-navegacion>
+    </nav> -->
+    <nav>
+       <nav-fijo></nav-fijo>
     </nav>
     <main>
      <cerveza-lonko ></cerveza-lonko>
@@ -27,6 +30,7 @@
      <script src="js/lonko.js" defer></script>
      <script src="js/subNav.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
      
 </body>
 </html>
