--- a/restaurant.html
+++ b/restaurant.html
@@ -9,9 +9,12 @@
     <title>Restaurant</title>
 </head>
 <body>
-     <nav class="mb-5" style="background: #000 url('assets/nav/negro.jpg') center center / cover no-repeat; height: 400px;">
+     <!-- <nav class="mb-5" style="background: #000 url('assets/nav/negro.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
-     </nav>
+     </nav> -->
+     <nav>
+       <nav-fijo></nav-fijo>
+      </nav>
 <main class="container my-5">
 
    
@@ -25,6 +28,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
      <script src="js/nav.js"defer></script>
      <script src="js/footer.js" defer></script>
-      <script src="js/menuPDF.js" defer></script>
+     <script src="js/menuPDF.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
 </body>
 </html>
