--- a/tienda.html
+++ b/tienda.html
@@ -9,9 +9,12 @@
     <title>Tienda</title>
 </head>
 <body>
-     <nav class="" style="background: #000 url('assets/nav/verde.jpg') center center / cover no-repeat; height: 400px;">
+     <!-- <nav class="" style="background: #000 url('assets/nav/verde.jpg') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
-    </nav>
+    </nav> -->
+      <nav>
+       <nav-fijo></nav-fijo>
+      </nav>
      <whatsapp-chat></whatsapp-chat> 
     <main>
   <suscribete-item></suscribete-item>
@@ -30,5 +33,6 @@
      <script type="module" src="js/formulario-pago.js"></script>
      <script type="module" src="js/suscribete.js"></script>
      <script type="module" src="js/partners.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
 </body>
 </html>
