--- a/weichafe.html
+++ b/weichafe.html
@@ -8,8 +8,11 @@
     <title>Wichafe</title>
 </head>
 <body>
-     <nav>
+    <!-- <nav>
         <mi-navegacion></mi-navegacion>
+    </nav> -->
+    <nav>
+       <nav-fijo></nav-fijo>
     </nav>
     <main>
       <cerveza-weichafe></cerveza-weichafe>
@@ -26,5 +29,6 @@
      <script src="js/weichafe.js" defer></script>
      <script src="js/subNav.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
 </body>
 </html>
