--- a/machi.html
+++ b/machi.html
@@ -8,8 +8,11 @@
     <title>Machi</title>
 </head>
 <body>
-     <nav >
+    <!-- <nav>
         <mi-navegacion></mi-navegacion>
+    </nav> -->
+    <nav>
+       <nav-fijo></nav-fijo>
     </nav>
     <main>
     <cerveza-machi ></cerveza-machi>
@@ -24,6 +27,7 @@
      <script src="js/machi.js" defer></script>
      <script src="js/subNav.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
     
 
 
