--- a/nosotros.html
+++ b/nosotros.html
@@ -8,9 +8,12 @@
     <title>Nosotros</title>
 </head>
 <body>
-     <nav class="mb-0" style="background: #000 url('assets/nav/') center center / cover no-repeat; height: 400px;">
+     <!-- <nav class="mb-0" style="background: #000 url('assets/nav/') center center / cover no-repeat; height: 400px;">
         <mi-navegacion></mi-navegacion>
-    </nav>
+    </nav> -->
+      <nav>
+       <nav-fijo></nav-fijo>
+      </nav>
     <main>
 <div class="container-fluid color-back text-white py-5">
   <h3 class="text-center "><b>Nosotros</b></h3>
@@ -68,5 +71,6 @@
      <script src="js/partners.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
      <script src="js/suscribete.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
 </body>
 </html>
