--- a/toqui.html
+++ b/toqui.html
@@ -8,8 +8,11 @@
     <title>Toqui</title>
 </head>
 <body>
-     <nav>
+     <!-- <nav>
         <mi-navegacion></mi-navegacion>
+    </nav> -->
+    <nav>
+       <nav-fijo></nav-fijo>
     </nav>
     <main>
         <cerveza-toqui></cerveza-toqui>
@@ -24,5 +27,6 @@
      <script src="js/toqui.js" defer></script>
      <script src="js/subNav.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
+     <script src="js/navFijo.js" defer></script>
 </body>
 </html>
