--- a/restaurant.html
+++ b/restaurant.html
@@ -30,5 +30,6 @@
      <script src="js/footer.js" defer></script>
      <script src="js/menuPDF.js" defer></script>
      <script src="js/navFijo.js" defer></script>
+      <script src="js/Toottip.js" defer></script>
 </body>
 </html>
