mejoras de texto en index y nosotros

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </nav>
     <main>
  <div class="color-back ">
-          <h3 class="text-center"><b>WenuPillán, más que cerveza artesanal</b></h3>
-
+          <h3 class="text-center titulo"><b>WenuPillán, más que cerveza artesanal</b></h3>   
+      <br>
           <p class="centered-justified">
-            Desde el corazón de La Araucanía nace Wenu Pillán, una cerveza con identidad, 
+            Desde el corazón de La Araucanía nace WenuPillán, una cerveza con identidad, 
             pasión y respeto por nuestras raíces.
             Inspirados por la fuerza de la tierra mapuche y una profunda conexión con la 
             naturaleza, elaboramos cada cerveza con
-            dedicación, aprendizaje constante y orgullo cultural.
+            dedicación, aprendizaje constante y orgullo cultural.<br>
           
 
       
@@ -34,8 +34,8 @@
             resultado de años de esfuerzo, amistad y la convicción de que la cultura 
             también se puede disfrutar en cada sorbo.
           </p>
-
-          <h4 class="text-center mt-3">
+          <br> 
+          <h4 class="text-center mt-3 text-action">
             ¡Te invitamos a conocer de nosotros, probar nuestras cervezas y ser parte 
             de este viaje con sentido!
           </h4>
