mejora de titulos

--- a/nosotros.html
+++ b/nosotros.html
@@ -50,9 +50,12 @@
 </div>
   <suscribete-item></suscribete-item>
  <image-carousel>
-    <img src="assets/nosotros/cerveza-1.jpg" alt="1">
-    <img src="assets/nosotros/cerveza-2.jpg" alt="1">
-    <img src="assets/nosotros/cerveza-3.jpg" alt="1">
+    <img src="assets/nosotros/cerveza-1.jpg" alt="Cervesas en la nieve">
+    <img src="assets/nosotros/cerveza-2.jpg" alt="Cervesas en hielo">
+    <img src="assets/nosotros/cerveza-3.jpg" alt="Botellas de cervezas">
+    <img src="assets/nav/wenupillan.jpg" alt="restaurant wenupillan">
+    <img src="assets/nav/nosotros.png" alt="nosotros">
+    <img src="assets/nav/nav-nosotros.jpg" alt="celebración">
   
    </image-carousel>
    <!-- partnes.js -->
