--- a/machi.html
+++ b/machi.html
@@ -28,6 +28,9 @@
      <script src="js/subNav.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
      <script src="js/navFijo.js" defer></script>
+     <script src="js/card.js" defer></script>
+     <script src="js/botonComprar.js" defer></script>
+     
     
 
 
