cambios en cerveza toqui

--- a/weichafe.html
+++ b/weichafe.html
@@ -30,5 +30,7 @@
      <script src="js/subNav.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
      <script src="js/navFijo.js" defer></script>
+     <script src="js/card.js" defer></script>
+     <script src="js/botonComprar.js" defer></script>
 </body>
 </html>
