--- a/lonko.html
+++ b/lonko.html
@@ -31,6 +31,8 @@
      <script src="js/subNav.js" defer></script>
      <script src="js/wassapChat.js" defer></script>
      <script src="js/navFijo.js" defer></script>
+     <script src="js/card.js" defer></script>
+     <script src="js/botonComprar.js" defer></script>
      
 </body>
 </html>
